--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KT Restaurant</title>
-  <link rel="stylesheet" href="Css/styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -81,6 +81,6 @@
           <a href="#" class="btn">Explore Menu <i class='bx bxs-right-arrow'></i></a>
       </div>
     </section>
-  <script src="Js/Script.js"></script>
+  <script src="JS/Script.js"></script>
 </body>
 </html>
