Add Comment above the Home section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
   </header>
     
-
+    <!-- Home -->
     <section class="home" id="home">
       <div class="home-text">
         <h1><span class="main">ከሚወዱት ሰዉ ጋር</span> ወደ እኛ ይምጡ <span class="main2">ይብሉ ፣ </span>ይጠጡ ፣ ያጣጥሙ ይደሰቱ</h1>
