I added the scroller button and the Footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <div class="container-box">
         <i class='bx bxs-map'></i>
-        <h3>Inside the Stadium</h3>
+        <h3>Inside the HU Stadium</h3>
         <a href="#">Get Directions</a>
       </div>
 
@@ -402,6 +402,54 @@
         
       </div>
     </section>
+
+    <!-- Scroll Top -->
+
+    <a href="#" class="scroll">
+      <i class='bx bx-up-arrow-alt'></i>
+    </a>
+
+    <!-- Footer -->
+    <footer>
+
+      <!-- Contact Us -->
+
+      <section class="contact" id="contact">
+        <div class="contact-content">
+          <div class="middle-text">
+            <h4>Contact Us</h4>
+            <h2>Call and Follow us on Social Networks</h2>
+          </div>
+          <div class="contact-text">
+            <div class="social">
+              <a href=""><i class='bx bxl-instagram-alt'></i></a>
+              <a href=""><i class='bx bxl-facebook'></i></a>
+              <a href=""><i class='bx bxl-tiktok'></i></a>
+              <a href=""><i class='bx bxl-github'></i></a>
+              <a href=""><i class='bx bxl-youtube'></i></a>
+            </div>
+            <div class="details">
+              <div class="main-d">
+                <a href=""><i class='bx bxs-location-plus'></i>Inside the HU Stadium</a>
+              </div>
+              <div class="main-d">
+                <a href=""><i class='bx bx-mobile-alt'></i>(+251) 97667767</a>
+              </div>
+              <div class="main-d">
+                <a href=""><i class='bx bxs-envelope'></i>kt@hotmail.com</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Copyright -->
+
+      <section class="copyright">
+        <p><span class="copyright-symbol">&copy;</span> 2024 KT Restaurant. All rights reserved.</p>
+      </section>
+      
+    </footer>
   <script src="JS/Script.js"></script>
 </body>
 </html>
