--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <a href="#">Order now</a>
             </div>
             <div class="top-icon">
-              <a href="#"><i class="bx bx-heart"></i></a>
+              <a href="#"><i class="bx bx-cart"></i></a>
             </div>
           </div>
           </div>
@@ -137,7 +137,7 @@
               <a href="#">Order now</a>
             </div>
             <div class="top-icon">
-              <a href="#"><i class="bx bx-heart"></i></a>
+              <a href="#"><i class="bx bx-cart"></i></a>
             </div>
           </div>
           </div>
@@ -158,7 +158,7 @@
               <a href="#">Order now</a>
             </div>
             <div class="top-icon">
-              <a href="#"><i class="bx bx-heart"></i></a>
+              <a href="#"><i class="bx bx-cart"></i></a>
             </div>
           </div>
           </div>
@@ -179,7 +179,7 @@
               <a href="#">Order now</a>
             </div>
             <div class="top-icon">
-              <a href="#"><i class="bx bx-heart"></i></a>
+              <a href="#"><i class="bx bx-cart"></i></a>
             </div>
           </div>
           </div>
@@ -200,7 +200,7 @@
               <a href="#">Order now</a>
             </div>
             <div class="top-icon">
-              <a href="#"><i class="bx bx-heart"></i></a>
+              <a href="#"><i class="bx bx-cart"></i></a>
             </div>
           </div>
           </div>
@@ -221,7 +221,7 @@
               <a href="#">Order now</a>
             </div>
             <div class="top-icon">
-              <a href="#"><i class="bx bx-heart"></i></a>
+              <a href="#"><i class="bx bx-cart"></i></a>
             </div>
           </div>
           </div>
@@ -242,7 +242,7 @@
               <a href="#">Order now</a>
             </div>
             <div class="top-icon">
-              <a href="#"><i class="bx bx-heart"></i></a>
+              <a href="#"><i class="bx bx-cart"></i></a>
             </div>
           </div>
           </div>
@@ -263,7 +263,7 @@
               <a href="#">Order now</a>
             </div>
             <div class="top-icon">
-              <a href="#"><i class="bx bx-heart"></i></a>
+              <a href="#"><i class="bx bx-cart"></i></a>
             </div>
           </div>
           </div>
