added more foods

--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
 
         <div class="row">
           <div class="img-box">
-            <img src="Image/OIP.jpg" alt="">
+            <img src="Image/Ethiopian-Tibs.jpg" alt="">
           </div>
           <div class="text-box">
-            <h3>Beyeaynetu</h3>
+            <h3>Tibs</h3>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
             <div class="in-text">
             <div class="price">
-              <h6>50.00 Br</h6>
+              <h6>150.00 Br</h6>
             </div>
             <div class="s-btn">
               <a href="#">Order now</a>
@@ -201,14 +201,35 @@
 
         <div class="row">
           <div class="img-box">
-            <img src="Image/5906mgd73wo11.jpg" alt="">
+            <img src="Image/sddefault.jpg" alt="">
           </div>
           <div class="text-box">
-            <h3>Beyeaynetu</h3>
+            <h3>Genfo</h3>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
             <div class="in-text">
             <div class="price">
-              <h6>50.00 Br</h6>
+              <h6>150.00 Br</h6>
+            </div>
+            <div class="s-btn">
+              <a href="#">Order now</a>
+            </div>
+            <div class="top-icon">
+              <a href="#"><i class='bx bxs-cart-add'></i></a>
+            </div>
+          </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="img-box">
+            <img src="Image/maxresdefault.webp" alt="">
+          </div>
+          <div class="text-box">
+            <h3>Kikil</h3>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <div class="in-text">
+            <div class="price">
+              <h6>100.00 Br</h6>
             </div>
             <div class="s-btn">
               <a href="#">Order now</a>
@@ -243,35 +264,14 @@
 
         <div class="row">
           <div class="img-box">
-            <img src="Image/5906mgd73wo11.jpg" alt="">
+            <img src="Image/healthy-vegetable-sandwitch_967536-9.avif" alt="">
           </div>
           <div class="text-box">
-            <h3>Beyeaynetu</h3>
+            <h3>Sanduch</h3>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
             <div class="in-text">
             <div class="price">
-              <h6>50.00 Br</h6>
-            </div>
-            <div class="s-btn">
-              <a href="#">Order now</a>
-            </div>
-            <div class="top-icon">
-              <a href="#"><i class='bx bxs-cart-add'></i></a>
-            </div>
-          </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="img-box">
-            <img src="Image/5906mgd73wo11.jpg" alt="">
-          </div>
-          <div class="text-box">
-            <h3>Beyeaynetu</h3>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-            <div class="in-text">
-            <div class="price">
-              <h6>50.00 Br</h6>
+              <h6>100.00 Br</h6>
             </div>
             <div class="s-btn">
               <a href="#">Order now</a>
